<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.pagePreference.page_preference">


    <!--Spinner widget-->


    <!-- ################################ Titre  ########################################## -->


    <Spinner
        android:id="@+id/langueSpinner"
        android:layout_width="172dp"
        android:layout_height="57dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sujetPage"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/sujetPage"
        android:layout_width="304dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:text="@string/titrepreference"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ligneNoire"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/buttonRetour"
        android:layout_width="80dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toTopOf="@+id/sujetPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/flecheback" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:text="@string/retour" />

    </LinearLayout>

    <TextView
        android:id="@+id/textTitre"
        android:layout_width="67dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/tutorat"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toEndOf="@+id/buttonRetour"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAcceuil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/acceuil"
        android:textColor="@color/bleu"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toEndOf="@+id/textTitre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ligneNoire"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="43dp"
        android:background="#000000"
        android:paddingBottom="2dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sujetPage"
        app:layout_constraintTop_toBottomOf="@+id/textTitre"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textLangue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/langues"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/langueSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/blanc"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/langueSpinner"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonEnregistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/enregistrer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTheme" />

    <!-- ################################ Titre  ########################################## -->

</androidx.constraintlayout.widget.ConstraintLayout>