<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- ################################ Titre  ########################################## -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <TextView
            android:id="@+id/textTitre"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="140dp"
            android:text="@string/tutorat"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginLeft="100dp"
            android:background="@drawable/settings"
            tools:ignore="MissingConstraints" />


    </LinearLayout>


    <TextView
        android:id="@+id/ligneNoire"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="43dp"
        android:background="#000000"
        android:paddingBottom="2dp"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <!-- ################################ Titre  ########################################## -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="328dp"
        android:layout_height="266dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/logo_menu"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_reservation"
        android:layout_width="336dp"
        android:layout_height="44dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100px"
        android:layout_marginBottom="150px"

        android:fontFamily="sans-serif-medium"
        android:text="@string/prendre_un_rendez_vous"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_a_propos"
        android:layout_width="336dp"
        android:layout_height="44dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="150px"
        android:text="@string/propos"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="336dp"
        android:layout_height="44dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="40dp"
        android:text="@string/connexion" />


</LinearLayout>